# Consoante

./: README.md  consoante.gresource.xml  consoante.in  heuristic_player.db  io.github.kriptolix.Consoante.json  io.gitlab.kriptolix.Consoante.json  meson.build  musicli-config.txt  notes.md
.flatpak/flatpak-builder/checksums/: x86_64-io.gitlab.kriptolix.Consoante.json
data/: io.github.kriptolix.Consoante.desktop.in  io.github.kriptolix.Consoante.gschema.xml  io.github.kriptolix.Consoante.metainfo.xml.in  io.github.kriptolix.Consoante.service.in  io.gitlab.kriptolix.Consoante.desktop.in  io.gitlab.kriptolix.Consoante.gschema.xml  io.gitlab.kriptolix.Consoante.metainfo.xml.in  io.gitlab.kriptolix.Consoante.service.in  meson.build  styles.css
data/icons/: meson.build
docs/: adaptive-player-spec.md  install.md
po/: POTFILES.in  meson.build
requirements/: python3-essentia.json  python3-librosa.json  python3-meson-python.json  python3-numpy.json  python3-pillow.json  python3-pybind11.json  python3-pythran.json  python3-scipy.json  python3-soundfile.json
src/: application.py
src/cli/: analyzer.py  analyzer_old.py  commands.py  db_manager.py  player.py  pyproject.toml  scanner.py  schema.sql  simulate.py
src/cli/database/: connection.py  queries.py  schema.py
src/cli/learning/: decay.py  reinforcement.py  rules.py  tuning.py
src/cli/playback/: events.py  pipeline.py  queue.py
src/cli/ranking/: scorer.py  selector.py  session_state.py
src/cli/tests/: test_scorer.py
src/gtk/ui/: ExecutionView.ui  MainWindow.ui  PlaybackControls.ui  QueueRow.ui  (+1 more)
(+6 files in other folders)
